<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_head"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_play_the"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_title"
        app:layout_constraintEnd_toStartOf="@+id/guide_end"
        app:layout_constraintStart_toEndOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/guide_top"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/label_war"
        android:textColor="?attr/colorPrimary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guide_top_bar_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guide_end"
        app:layout_constraintStart_toEndOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_head" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top_bar_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_game_rules_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:gravity="start"
        android:text="@string/label_game_rules_title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lv_game_rules"
        app:layout_constraintEnd_toStartOf="@+id/guide_end"
        app:layout_constraintStart_toEndOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/guide_top_bar_bottom"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <ListView
        android:id="@+id/lv_game_rules"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:divider="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/guide_bottom_bar_top"
        app:layout_constraintEnd_toStartOf="@+id/guide_end"
        app:layout_constraintStart_toEndOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_game_rules_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_bottom_bar_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_play_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/action_play"
        app:layout_constraintBottom_toTopOf="@+id/guide_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guide_end"
        app:layout_constraintStart_toEndOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/guide_bottom_bar_top" />

</androidx.constraintlayout.widget.ConstraintLayout>